Work in progress changes 2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Basic Grades"
-        android:textSize="24sp"/>
+        android:textSize="24sp"
+        android:id="@+id/listview_grades"/>
 </RelativeLayout>
